--- a/RealState.Api/appsettings.json
+++ b/RealState.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDb": "mongodb+srv://zaid_2003:zaid_1907@cluster1.03jozqw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1"
+    "MongoDb": "your mongo uri"
   },
   "MongoSettings": {
     "Database": "Millions"
